log
Thu 25 Apr 2024 01:30:19 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
0748c30
Thu 25 Apr 2024 01:37:10 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:72: error: comparison between pointer and integer [-Werror]
   45 |   if ((map->buckets[position] == NULL) || (map->buckets[position]->key == -1)){
      |                                                                        ^~
cc1: all warnings being treated as errors
Compilation failed
361af0d
Thu 25 Apr 2024 01:37:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8966403
Thu 25 Apr 2024 01:46:42 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
97585c5
Thu 25 Apr 2024 01:47:09 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
43fdf2f
Thu 25 Apr 2024 01:52:19 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:83:67: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   83 |   if (map == NULL || map->buckets == NULL || is_equal(map->buckets->key,key)) return;
      |                                                                   ^~
      |                                                                   ->
Compilation failed
8323107
Thu 25 Apr 2024 01:54:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:83:70: error: expected identifier before ‘->’ token
   83 |   if (map == NULL || map->buckets == NULL || !is_equal(map->buckets->->key,key)) return;
      |                                                                      ^~
hashmap.c:83:47: error: too few arguments to function ‘is_equal’
   83 |   if (map == NULL || map->buckets == NULL || !is_equal(map->buckets->->key,key)) return;
      |                                               ^~~~~~~~
hashmap.c:35:5: note: declared here
   35 | int is_equal(void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
d02de93
Thu 25 Apr 2024 01:54:22 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
4b980f0
Thu 25 Apr 2024 01:59:10 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   59 |   map->capacidad *= 2;
      |        ^~~~~~~~~
      |        capacity
hashmap.c:60:55: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   60 |   map->buckets = (Pair**) malloc(sizeof(Pair*) * map->capacidad);
      |                                                       ^~~~~~~~~
      |                                                       capacity
hashmap.c:63:22: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   63 |   while(index < map->capacidad){
      |                      ^~~~~~~~~
      |                      capacity
hashmap.c:64:5: error: implicit declaration of function ‘insert’; did you mean ‘insertMap’? [-Werror=implicit-function-declaration]
   64 |     insert(map, old_buckets[index]->key, old_buckets[index]->value);
      |     ^~~~~~
      |     insertMap
cc1: all warnings being treated as errors
Compilation failed
3c7143e
Thu 25 Apr 2024 01:59:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   59 |   map->capacidad *= 2;
      |        ^~~~~~~~~
      |        capacity
hashmap.c:60:55: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   60 |   map->buckets = (Pair**) malloc(sizeof(Pair*) * map->capacidad);
      |                                                       ^~~~~~~~~
      |                                                       capacity
hashmap.c:63:22: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   63 |   while(index < map->capacidad){
      |                      ^~~~~~~~~
      |                      capacity
Compilation failed
114f9f2
Thu 25 Apr 2024 01:59:42 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:59:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   59 |   map->capacidad *= 2;
      |        ^~~~~~~~~
      |        capacity
hashmap.c:63:22: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capacidad’; did you mean ‘capacity’?
   63 |   while(index < map->capacidad){
      |                      ^~~~~~~~~
      |                      capacity
Compilation failed
be9e777
Thu 25 Apr 2024 01:59:53 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e9c5be2
Thu 25 Apr 2024 02:00:52 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c6aa698
Thu 25 Apr 2024 02:04:34 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
21048a8
Thu 25 Apr 2024 02:05:36 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9a0d1e3
Thu 25 Apr 2024 02:08:37 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 30/70
53ad0a9
Thu 25 Apr 2024 02:36:06 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
5fabcc5
Thu 25 Apr 2024 02:37:58 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|4
total_score: 30/70
f2f6dbb
Thu 25 Apr 2024 02:40:52 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 30/70
6a8940f
Thu 25 Apr 2024 02:41:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
f4ee2e4
Thu 25 Apr 2024 02:42:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
e608491
Thu 25 Apr 2024 02:44:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:97:58: error: ‘*map->buckets’ is a pointer; did you mean to use ‘->’?
   97 |   if (map == NULL || map->buckets == NULL || map->buckets->key == NULL) return;
      |                                                          ^~
      |                                                          ->
Compilation failed
bec5a40
Thu 25 Apr 2024 03:11:00 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘solveCollisions’:
hashmap.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dcff5a6
Thu 25 Apr 2024 03:59:09 AM UTC: 
 hashmap.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:19: error: comparison between pointer and integer [-Werror]
   58 |         if (index == hash(key, map->capacity)) {
      |                   ^~
cc1: all warnings being treated as errors
Compilation failed
71c1793
Thu 25 Apr 2024 03:59:24 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
0d7759b
Thu 25 Apr 2024 04:06:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
b7fc0bd
Thu 25 Apr 2024 04:10:33 AM UTC: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c:57:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   57 |   map->buckets[position] = createPair(key, value);
      |      ^~
hashmap.c:58:13: error: expected ‘)’ before ‘->’ token
   58 |   strcpy(map->buckets[position]->key,key);
      |             ^~
      |             )
hashmap.c:59:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   59 |   map->buckets[position]->value = value;
      |      ^~
hashmap.c:60:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   60 |   map->size++;
      |      ^~
hashmap.c:61:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   map->current = position;
      |      ^~
hashmap.c:62:1: error: expected identifier or ‘(’ before ‘}’ token
   62 | }
      | ^
Compilation failed
31e10dc
